# gp-protocol

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: auth.rs  env.rs  event.rs  gateway.rs  lib.rs  os.rs  request.rs  session.rs  state.rs
tests/: wire_format.rs  wire_format.snapshot
