[package]
name = "gp-protocol"
# Crate version — independent of any client/backend release version.
# The wire-protocol version is negotiated at runtime (see src/lib.rs).
version = "1.5.1"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Dylan Westra <dylanwestra@gmail.com>"]
description = "Versioned wire protocol between the GP Client GUI and the gpservice backend (GlobalProtect-compatible VPN client)."
repository = "https://github.com/techneut92/gp-protocol"
keywords = ["globalprotect", "vpn", "protocol"]
categories = ["network-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2.0.0-rc", features = ["derive"] }
chrono = "0.4"
humantime = "2"
zeroize = "1"
